welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:10: error: type mismatch;
 found   : Unit
 required: Int
	if ( a+b !=10 || a+c!=10 || b+c!=10 || a+b != 10 + (a+c) || a+b!= 10 + (b+c ) ) {
        ^